--- a/apps/android-app/app/src/main/res/values/strings.xml
+++ b/apps/android-app/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Edu Class</string>
+    <string name="content_description_app_logo">App logo</string>
+    <string name="hint_email_address">Email Address</string>
+    <string name="hint_password">Password</string>
+    <string name="text_sign_in">Sign In</string>
+    <string name="text_forgot_password_prompt">Forgotten password?</string>
+    <string name="text_sign_up_prompt">Don\'t have an account? <u>Sign Up</u></string>
+    <string name="text_google_sign_in">Sign In with Google</string>
+    <string name="text_facebook_sign_in">Sign In with Facebook</string>
+    <string name="text_github_sign_in">Sign In with GitHub</string>
 </resources>
