--- a/apps/android-app/app/src/main/res/values/strings.xml
+++ b/apps/android-app/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
     <string name="text_logout">Logout</string>
     <string name="hint_confirm_password">Confirm password</string>
     <string name="text_sign_up">SignUp</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
