--- a/apps/android-app/app/src/main/res/values/strings.xml
+++ b/apps/android-app/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
     <string name="text_sign_up">SignUp</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="text_create_a_class">Tạo lớp học</string>
+    <string name="text_join_class">Tham gia lớp học</string>
 </resources>
